# wasm-compilation-bug

./: Cargo.toml
res/: validation_params
src/: main.rs
wasm-files/: cumulus_not_working.with_logs.wasm  cumulus_working.with_logs.wasm
