[package]
name = "wasm-compilation-bug"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cumulus-branch" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "cumulus-branch" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "cumulus-branch" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "cumulus-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cumulus-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cumulus-branch" }
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
env_logger = "0.7.1"

